--- a/style.css
+++ b/style.css
@@ -1,34 +1,103 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'helvetica'
 }
 
-body{
+body {
     background-color: #252525;
+   
 }
 
-.container{
-    border: 1px solid #fff;
-     display: flex;
-     flex-direction: column;
-     width: 310px;
-     height: 568px;
-     
-     align-items: center;    
 
-     color: #fff;
+@media (max-width: 320px) {
+
+    .container {
+        border: 1px solid #fff;
+      
+        display: flex;
+        flex-direction: column;
+        width: 310px;
+        height: 568px;
+
+        align-items: center;
+        background-color: #c1c1c1;
+        color: #fff;
+    }
+
+    .container h2 {
+        margin-top: 30px;       
+        font-size: 18px;
+        color: #252525;
+    }
+
+    form {
+        width: 290px;
+        display: flex;
+        flex-direction: column;
+        padding: 30px 20px;
+        margin: 10px 0;
+        background-color: #252525;
+    }
+
+    input {
+        background-color: #fff;
+        color: #000;
+        margin: 3px 0 20px; 
+        height: 30px;  
+        font-size: 15px;     
+    }
+
+    button{
+        background-color: #252525;
+        color: #fff;
+        padding: 10px 22px;
+        text-transform: uppercase;
+    }
 }
 
-.container h2{
-    margin-top: 30px;
-    margin-bottom: 60px;
-    font-size: 18px;
-}
+@media (min-width: 992px) {
+    .container {
+        border: 1px solid #fff;
+        background-color: #c1c1c1;
+        display: flex;
+        flex-direction: column;
+        width: 650px;
+        height: 568px;
+        margin: 40px auto;
 
-input{
-    width:100%;
-   height: 30px;
-   margin: 10px 0;
+        align-items: center;
+
+        color: #fff;
+
+    }
+
+    h2{
+        color: #252525;
+        margin-top: 20px;
+    }
+
+    form {
+        max-width: 100%;
+        border-radius: 4px;
+        display: flex;
+        flex-direction: column;
+        padding: 60px 20px;
+        margin: 20px 0;
+        background-color: #252525;
+    }
+
+    input {
+        background-color: #fff;
+        color: #000;
+        margin: 3px 0 20px;
+    }
+
+    button{
+        background-color: #252525;
+        color: #fff;
+        padding: 10px 22px;
+        text-transform: uppercase;
+    }
 }
